Change Successful Signup Page

--- a/app/src/main/res/layout/activity_successfulsignup.xml
+++ b/app/src/main/res/layout/activity_successfulsignup.xml
@@ -106,9 +106,11 @@
         android:layout_width="201dp"
         android:layout_height="41dp"
         android:layout_marginBottom="32dp"
-        android:background="@drawable/_rectangle_25_shape"
+        android:background="@drawable/_rectangle_27_shape"
+        app:backgroundTint="@color/_rectangle_23_color"
         android:text="@string/go_to_log_in_page_string"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/rectangle_24"
         app:layout_constraintEnd_toEndOf="@+id/rectangle_24"
         app:layout_constraintHorizontal_bias="0.503"
