import receipt 버튼 추가, 아이콘 이미지 변경 (크기조정)

--- a/app/src/main/res/layout/activity_financialmain.xml
+++ b/app/src/main/res/layout/activity_financialmain.xml
@@ -307,39 +307,28 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:orientation="horizontal"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/rectangle_1_ek1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         tools:layout_editor_absoluteX="10dp">
 
         <Button
-            android:id="@+id/importGalleryBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="0dp"
-            android:alpha="0.60000002384186"
-            android:background="@drawable/rectangle_14_ek1_shape"
-            android:text="import from gallery"
-            android:textColor="#000000"
-            android:textSize="13dp"
-            app:backgroundTint="@color/_rectangle_50_color" />
-
-        <Button
             android:id="@+id/takePictureBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="0dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginEnd="30dp"
             android:alpha="0.60000002384186"
             android:background="@drawable/_rectangle_15_shape"
-            android:text="take a picture"
+            android:text="Import receipt"
             android:textColor="#000000"
             android:textSize="13dp"
-            app:backgroundTint="@color/_rectangle_50_color" />
+            app:backgroundTint="@color/rectangle_14_ek1_color" />
     </LinearLayout>
 
     <LinearLayout
