toolbar 이용해 모든 페이지 title bar 커스텀 완료

--- a/app/src/main/res/layout/activity_importimage.xml
+++ b/app/src/main/res/layout/activity_importimage.xml
@@ -6,6 +6,56 @@
     android:layout_height="match_parent"
     tools:context="com.example.babygage_ocr.ImportimageActivity">
 
+    <!-- 상단바-->
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginBottom="240dp"
+        android:background="@color/_bg__intro_ek2_color"
+        android:gravity="top"
+        app:layout_constraintBottom_toTopOf="@+id/iv_main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="2dp">
+
+            <TextView
+                android:id="@+id/babygage_ek10"
+                android:layout_width="127dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal|center"
+
+                android:fontFamily="monospace"
+                android:gravity="center"
+                android:text="BABYGAGE"
+                android:textColor="@color/babygage_color"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="62dp"
+                android:layout_height="53dp"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/babygage_ek10"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/logo" />
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -76,8 +126,8 @@
 
     <ImageView
         android:id="@+id/iv_main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="153dp"
+        android:layout_height="161dp"
         android:layout_marginStart="131dp"
         android:layout_marginTop="296dp"
         android:layout_marginEnd="132dp"
