--- a/app/src/main/res/layout/activity_introselection.xml
+++ b/app/src/main/res/layout/activity_introselection.xml
@@ -20,34 +20,55 @@
      *
      */
     -->
+    <!-- 상단바-->
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="114dp"
-        android:layout_height="99dp"
-        android:layout_marginStart="230dp"
-        app:srcCompat="@drawable/logo" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginBottom="240dp"
+        android:background="@color/_bg__intro_ek2_color"
+        android:gravity="top"
+        app:layout_constraintBottom_toTopOf="@+id/iv_main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <RelativeLayout
-        android:id="@+id/group_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="111dp"
-        android:layout_marginTop="19dp">
-
-        <TextView
-            android:id="@+id/babygage_ek1"
-            android:layout_width="127dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_horizontal|center"
-            android:layout_marginLeft="-3dp"
-            android:layout_marginTop="11dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/babygage_ek1_string"
-            android:textColor="@color/babygage_color"
-            android:textSize="20sp" />
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="2dp">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/babygage_ek10"
+                android:layout_width="127dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal|center"
+
+                android:fontFamily="monospace"
+                android:gravity="center"
+                android:text="BABYGAGE"
+                android:textColor="@color/babygage_color"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="62dp"
+                android:layout_height="53dp"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/babygage_ek10"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/logo" />
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
 
     <Button
         android:id="@+id/householdbtn"
@@ -63,10 +84,16 @@
 
     <ImageView
         android:id="@+id/householdImage"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="75dp"
-        android:layout_marginTop="340dp"
+        android:layout_width="50dp"
+        android:layout_height="60dp"
+        android:layout_alignStart="@+id/householdbtn"
+        android:layout_alignTop="@+id/householdbtn"
+        android:layout_alignEnd="@+id/householdbtn"
+        android:layout_alignBottom="@+id/householdbtn"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginBottom="71dp"
         android:contentDescription="household ledger image"
         android:elevation="10dp"
         android:src="@drawable/vector" />
@@ -86,24 +113,28 @@
 
     <ImageView
         android:id="@+id/financialImage"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="255dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignStart="@+id/financialbtn"
+        android:layout_alignEnd="@+id/financialbtn"
+        android:layout_marginStart="43dp"
         android:layout_marginTop="340dp"
+        android:layout_marginEnd="46dp"
         android:contentDescription="financial audit image"
         android:elevation="10dp"
         android:src="@drawable/vector_ek1" />
 
-    <TextView android:id="@+id/hi_ooo__welcome_to_easygage_"
-        android:layout_gravity="center_horizontal|center"
-        android:gravity="center"
-        android:textSize="12sp"
-        android:textColor="@color/babygage_color"
-        android:layout_marginLeft="103dp"
-        android:layout_marginTop="261dp"
+    <TextView
+        android:id="@+id/hi_ooo__welcome_to_easygage_"
         android:layout_width="191dp"
         android:layout_height="31dp"
-        android:text="@string/hi_ooo__welcome_to_easygage__string" />
+        android:layout_gravity="center_horizontal|center"
+        android:layout_marginLeft="103dp"
+        android:layout_marginTop="261dp"
+        android:gravity="center"
+        android:text="@string/hi_ooo__welcome_to_easygage__string"
+        android:textColor="@color/babygage_color"
+        android:textSize="14dp" />
 
 </RelativeLayout>
 
