--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,47 +20,6 @@
         app:backgroundTint="@color/_rectangle_50_color" />
 
 
-    <RelativeLayout
-        android:id="@+id/group_17_ek7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="123dp"
-        android:layout_marginTop="17dp">
-
-
-        <RelativeLayout
-            android:id="@+id/group_2_ek12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="108dp"
-            android:layout_marginTop="0dp">
-
-
-            <RelativeLayout
-                android:id="@+id/group_12_ek12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp">
-
-
-            </RelativeLayout>
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/babygage_ek11"
-            android:layout_width="127dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_horizontal|center"
-            android:layout_marginLeft="-3dp"
-            android:layout_marginTop="11dp"
-            android:gravity="center"
-            android:text="@string/babygage_ek11_string"
-            android:textColor="@color/babygage_color"
-            android:textSize="20sp" />
-
-    </RelativeLayout>
 
     <TextView
         android:id="@+id/log_in_ek3"
@@ -134,14 +93,55 @@
         android:textColor="@color/babygage_color"
         android:textSize="12sp"
         android:textStyle="italic" />
+    <!-- 상단바-->
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="114dp"
-        android:layout_height="99dp"
-        android:layout_marginStart="230dp"
-        app:srcCompat="@drawable/logo" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginBottom="240dp"
+        android:background="@color/_bg__intro_ek2_color"
+        android:gravity="top"
+        app:layout_constraintBottom_toTopOf="@+id/iv_main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="2dp">
+
+            <TextView
+                android:id="@+id/babygage_ek10"
+                android:layout_width="127dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal|center"
+
+                android:fontFamily="monospace"
+                android:gravity="center"
+                android:text="BABYGAGE"
+                android:textColor="@color/babygage_color"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="62dp"
+                android:layout_height="53dp"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/babygage_ek10"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/logo" />
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
     <!--	</RelativeLayout>-->
 
 
