--- a/app/src/main/res/layout/activity_successfulsignup.xml
+++ b/app/src/main/res/layout/activity_successfulsignup.xml
@@ -8,68 +8,67 @@
     >
 
 
-    <TextView
-        android:id="@+id/babygage_ek10"
-        android:layout_width="127dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_horizontal|center"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="28dp"
-        android:gravity="center"
-        android:text="@string/babygage_ek10_string"
-        android:textColor="@color/babygage_color"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!-- 상단바-->
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="114dp"
-        android:layout_height="99dp"
-
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginBottom="240dp"
+        android:background="@color/_bg__intro_ek2_color"
+        android:gravity="top"
+        app:layout_constraintBottom_toTopOf="@+id/iv_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/babygage_ek10"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
-
-    <TextView
-        android:id="@+id/sign_up_ek5"
-        android:layout_width="177.5dp"
-        android:layout_height="41.5dp"
-        android:text="@string/sign_up_ek5_string"
-        android:textColor="@color/babygage_color"
-        android:textSize="13sp"
-        app:layout_constraintBottom_toTopOf="@+id/rectangle_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/babygage_ek10"
-        app:layout_constraintVertical_bias="0.465"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toTopOf="parent">
 
-    <View
-        android:id="@+id/line_15"
-        android:layout_width="161.03dp"
-        android:layout_height="1dp"
-        android:background="@drawable/line_15_shape"
-        app:layout_constraintBottom_toTopOf="@+id/rectangle_24"
-        app:layout_constraintEnd_toEndOf="@+id/sign_up_ek5"
-        app:layout_constraintHorizontal_bias="0.176"
-        app:layout_constraintStart_toStartOf="@+id/sign_up_ek5"
-        app:layout_constraintTop_toBottomOf="@+id/sign_up_ek5"
-        app:layout_constraintVertical_bias="0.0" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="2dp">
+
+            <TextView
+                android:id="@+id/babygage_ek10"
+                android:layout_width="127dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal|center"
+
+                android:fontFamily="monospace"
+                android:gravity="center"
+                android:text="BABYGAGE"
+                android:textColor="@color/babygage_color"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="62dp"
+                android:layout_height="53dp"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/babygage_ek10"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/logo" />
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
 
     <View
         android:id="@+id/rectangle_24"
         android:layout_width="354dp"
         android:layout_height="233dp"
-        android:layout_marginBottom="268dp"
         android:background="@drawable/rectangle_24_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.358" />
 
     <TextView
         android:id="@+id/welcomemsg"
