--- a/app/src/main/res/layout/activity_importimage.xml
+++ b/app/src/main/res/layout/activity_importimage.xml
@@ -12,14 +12,14 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:layout_marginBottom="240dp"
         android:background="@color/_bg__intro_ek2_color"
         android:gravity="top"
         app:layout_constraintBottom_toTopOf="@+id/iv_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,7 +30,7 @@
 
             <TextView
                 android:id="@+id/babygage_ek10"
-                android:layout_width="127dp"
+                android:layout_width="124dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal|center"
 
@@ -57,6 +57,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
@@ -126,17 +127,16 @@
 
     <ImageView
         android:id="@+id/iv_main"
-        android:layout_width="153dp"
-        android:layout_height="161dp"
+        android:layout_width="257dp"
+        android:layout_height="313dp"
         android:layout_marginStart="131dp"
-        android:layout_marginTop="296dp"
+
         android:layout_marginEnd="132dp"
-        android:layout_marginBottom="276dp"
+        android:layout_marginBottom="130dp"
         android:background="#5CFFFFFF"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
