--- a/app/src/main/res/xml/external.xml
+++ b/app/src/main/res/xml/external.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-path
-        name="sdcard"
-        path="." />
+<!--    <external-path-->
+<!--        name="sdcard"-->
+<!--        path="." />-->
+    <external-path name="files" path="Android/data/com.example.babygage_ocr/files" />
 </paths>
